<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient1"
    android:padding="20dp"
    tools:context=".Results">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:gravity="center"
        android:textSize="35sp"
        android:text="@string/results"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:src="@drawable/results"/>

    <TextView
        android:id="@+id/correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/correct"
        android:textStyle="bold|italic"
        android:textColor="@color/easytab"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="35sp"
        android:text="@string/out_of"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/_5"
        android:textStyle="bold|italic"
        android:textColor="@color/hardtab"/>

    <Button
        android:id="@+id/homebtn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_margin="25dp"
        android:backgroundTint="@color/mainbtn"
        android:text="@string/home"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/maintext"
        />

</LinearLayout>